--- a/templates/chat.html
+++ b/templates/chat.html
@@ -25,7 +25,7 @@ $(document).ready(function(){
 #}
 });
 </script>
-
+<div class="alert alert-warning">Currently English Only</div>
 <form id="submitMsg" action="/submit" method="post" role="form">
 <div class="form-group">
     <textarea name="content" class="form-control" placeholder="input content" rows="5"> </textarea>
