--- a/templates/chat.html
+++ b/templates/chat.html
@@ -8,7 +8,7 @@
 {% for item in all_msg %}
 <li class="list-group-item">
 <h6 class="list-group-item-heading">@{{item.name}} {{item.time}}</h4>
-<p class="list-group-item-text">{{item.content}}</p>
+<p class="list-group-item-text">{{item.content.decode('utf8')}}</p>
 </li>
 {% endfor %}
 </ul>
